# pylion

./: .gitignore  CHANGELOG.md  pyproject.toml  readme.md
pylion/: functions.py  pylion.py  utils.py
src/pylion/: __init__.py  _version.py  functions.py  lammps.py  pylion.py  utils.py
src/pylion/templates/: simulation.j2
tests/: conftest.py  test_equilibriumseparation.py  test_micromotionamplitude.py  test_normalmodes.py  test_pylion.py  test_secularmotionfrequencies.py  test_simpleexample.py
